refactor word assignment logic in AncientTablet and improve ResearchTableScreen interactions
Took 2 hours 6 minutes